tests/specs/ecosystem/zone_x/zone_x/0_7_0.test
zone-x/zone-x/0.7.0
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2304 [ERROR]: Cannot find name 'TimeZone'.
export function getCurrentTimeZone(): TimeZone {
                                      ~~~~~~~~
    at file://<tmpdir>/src/index.ts:2:39

TS2304 [ERROR]: Cannot find name 'TimeZone'.
  timeZone: TimeZone;
            ~~~~~~~~
    at file://<tmpdir>/src/index.ts:15:13

Found 2 errors.

error: Type checking failed.

